# Multimodal-Property-Price-Prediction

./: .gitignore  23124043_predictions.csv  pyproject.toml  requirements.txt
notebooks/: eda.ipynb  preprocessing.ipynb  preprocessing_with_spatial_features.ipynb
scripts/: data_fetcher.py  zoom_experiment.py
zoom_experiments/: README.txt
