[project]
name = "cdc-open-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "catboost>=1.2.8",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "grad-cam>=1.5.5",
    "ipywidgets>=8.1.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "timm>=1.0.22",
    "xgboost>=3.1.2",
]
